# urirun-contract

./: .dockerignore  .gitignore  ARCHITECTURE.md  Makefile  README.md  check_single_source.py  docker-compose.yml  pyproject.toml
.github/workflows/: contract.yml
TODO/: Makefile  README.md  consumer_service.py  contract.yml  docker-compose.yml  emit_handlers.py  handlers_generated.py  nl_to_contract.py  orchestrator_drive.py  producer_service.py  regen_check.py
adapters/: conformance.py
ci/: check_compat.py  check_single_source.py  emit_handlers.py  emit_jsonschema.py  fleet_coverage.baseline.json  fleet_coverage.py  nl_to_contract.py  pre_commit.sh  regen_check.py  scaffold_contract.py
examples/windowpair/: README.md
examples/windowpair/schema/: window.command.close.input.schema.json  window.command.close.output.schema.json  window.command.restore.input.schema.json  window.command.restore.output.schema.json
orchestrator/: Dockerfile  drive.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
scripts/: release.sh
sdk/go/: go.mod
sdk/go/cmd/enforce/: main.go
sdk/go/contract/: contract.go
sdk/js/: README.md  contract.mjs  package.json
src/: handlers_generated.go  handlers_generated.mjs
tests/: test_codegen_enforce.py  test_compat.py  test_conformance.py  test_contract_export.py  test_contract_helpers.py  test_fleet_coverage.py  test_gate.py  test_jsonschema_emit.py  test_no_kernel_drift.py  test_polyglot_emit.py  test_runtime_enforce_xlang.py  test_scaffold.py
toolkit/: contract_gate.py
urirun_contract/: __init__.py  check_single_source.py  codegen.py  contract_compat.py  contract_export.py  contract_jsonschema.py  contract_lint.py  contract_reversible.py  contract_scaffold.py  contract_typescript.py
xlang/: peer.py
