[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-contract"
version = "0.1.0"
description = "Route contracts for urirun connectors — declared output shape, effect class, reversibility and composition wires"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Tom Sapletta", email = "info@softreck.dev" }]
requires-python = ">=3.10"
dependencies = []  # zero required deps — gate works standalone; urirun optional for attach_contracts

[project.optional-dependencies]
urirun = ["urirun>=0.4"]
dev   = ["pytest>=7", "radon"]

[project.urls]
Homepage   = "https://urirun.com"
Repository = "https://github.com/if-uri/urirun-contract"

[tool.setuptools.packages.find]
include = ["urirun_contract*"]
